/*
 * Copyright (C) 2017 Dgraph Labs, Inc. and Contributors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Use gen.sh to generate .pb.go files.
syntax = "proto3";

package protos;
import "task.proto";

message Payload {
	bytes Data = 1;
}

// BackupPayload is used both as a request and a response.
// When used in request, cluster represents the list of cluster that need to be backed up.
// When used in response, cluster represent the list of cluster that were backed up.
message ExportPayload {
	uint64 req_id = 1;    // Use req_id to handle duplicate requests.
	uint32 group_id = 2;  // Group id to back up.
	enum Status {
		NONE      = 0;
		SUCCESS   = 1;
		DUPLICATE = 2;
		FAILED    = 3;
	}
	Status status = 3;
}

service Worker {
	// Connection testing RPC.
	rpc Echo (Payload)             returns (Payload) {}

	// RAFT serving RPCs.
	rpc RaftMessage (Payload)                     returns (Payload) {}
	rpc JoinCluster (RaftContext)            returns (Payload) {}
}
